kubernetes/Tenark.Web.Portal/base/post-processing-service.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: post-processing-service
  name: post-processing-service
  namespace: post-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-processing-service
  strategy: {}
  template:
    metadata:
      labels:
        app: post-processing-service
        aadpodidbinding: post-processing-service-pod-identity
    spec:
      containers:
        - image: tctmvp.azurecr.io/post-processing-service:1.5
          name: post-processing-service
          imagePullPolicy: Always
          resources: {}
status: {}
