kubernetes/Tenark.Web.Portal/base/tenark-web-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ternark-web-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ternark-web-portal
  template:
    metadata:
      labels:
        app: ternark-web-portal
    spec:
      containers:
      - name: ternark-web-portal
        image: tenark.azurecr.io/ternark-web-portal:v0.0.17
        resources:
          limits:
            cpu: "2"
            memory: "2048Mi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
