kubernetes/Tenark.Web.Portal/base/tenark-web-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenark-web-portal-service
spec:
  selector:
    app: tenark-web-portal-service
  ports:
    - port: 8080
      targetPort: 8080
