kubernetes/Tenark.Web.Portal/base/ternark-web-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenark-web-portal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: tenark.com
    http:
      paths:
      - path: /web-portal
        pathType: Prefix
        backend:
          service:
            name: tenark-web-portal-service
            port:
              number: 8081
  # Optional TLS (uncomment if you have a certificate)
  # tls:
  # - hosts:
  #     - tenant-a.bookstore.com
  #   secretName: tenant-a-tls
